package com.camila.sistema_academico.interfaces;

public interface Aprobador {
    void aprobarSolicitud(String codigoSolicitud);
}
