package com.camila.sistema_academico.interfaces;

public interface Autenticable {
    boolean login(String usuario, String password);
}
