package com.camila.sistema_academico.interfaces;

public interface Evaluador {
    void evaluarEstudiante(String estudiante, String trabajo);
}
