package com.camila.sistema_academico.interfaces;

public interface Notificable {
    void enviarNotificacion(String mensaje);
}
